; ModuleID = '/home/carl/AnghaBench/ish/emu/extr_memory.c_mem_init.c'
source_filename = "/home/carl/AnghaBench/ish/emu/extr_memory.c_mem_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mem = type { i32, i32, i64, i64, i32 }

@MEM_PGDIR_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mem_init(%struct.mem* %0) #0 {
  %2 = alloca %struct.mem*, align 8
  store %struct.mem* %0, %struct.mem** %2, align 8
  %3 = load i32, i32* @MEM_PGDIR_SIZE, align 4
  %4 = call i32 @calloc(i32 %3, i32 8)
  %5 = load %struct.mem*, %struct.mem** %2, align 8
  %6 = getelementptr inbounds %struct.mem, %struct.mem* %5, i32 0, i32 4
  store i32 %4, i32* %6, align 8
  %7 = load %struct.mem*, %struct.mem** %2, align 8
  %8 = getelementptr inbounds %struct.mem, %struct.mem* %7, i32 0, i32 3
  store i64 0, i64* %8, align 8
  %9 = load %struct.mem*, %struct.mem** %2, align 8
  %10 = getelementptr inbounds %struct.mem, %struct.mem* %9, i32 0, i32 2
  store i64 0, i64* %10, align 8
  %11 = load %struct.mem*, %struct.mem** %2, align 8
  %12 = getelementptr inbounds %struct.mem, %struct.mem* %11, i32 0, i32 0
  %13 = call i32 @wrlock_init(i32* %12)
  ret void
}

declare dso_local i32 @calloc(i32, i32) #1

declare dso_local i32 @wrlock_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
